# BlockGame

./: myKey.jks
main/: AndroidManifest.xml
main/assets/misc/: stage1.txt  stage10.txt  (+8 more)
main/cpp/: CMakeLists.txt
main/cpp/Actors/: Ball.cpp  Ball.h  Bouncer.cpp  Bouncer.h  BreakableBrick.cpp  BreakableBrick.h  BrickParent.cpp  BrickParent.h  Camera.cpp  Camera.h  HActor.cpp  HActor.h  HPawn.cpp  HPawn.h  Item.cpp  Item.h  ScoreBoard.cpp  ScoreBoard.h  StageManager.cpp  StageManager.h  UnbreakableBrick.cpp  UnbreakableBrick.h
main/cpp/Common/: ActorObjectPool.h  Common.cpp  Common.h  EventQ.cpp  EventQ.h  Framework.cpp  Framework.h  HObject.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h
main/cpp/Components/: BoxCollisionComponent.cpp  BoxCollisionComponent.h  Camera2DComponent.cpp  Camera2DComponent.h  CircleCollisionComponent.cpp  CircleCollisionComponent.h  CollisionParent.cpp  CollisionParent.h  HComponent.h  HPrimitiveComponent.cpp  HPrimitiveComponent.h  HSceneComponent.cpp  HSceneComponent.h  ImageComponent.cpp  ImageComponent.h  MovementComponent.cpp  MovementComponent.h  ParticleComponent.cpp  ParticleComponent.h  TTFComponent.cpp  TTFComponent.h  WAVPlayerComponent.cpp  WAVPlayerComponent.h
main/cpp/Controllers/: HPlayerController.cpp  HPlayerController.h
main/cpp/Levels/: HLevelBase.cpp  HLevelBase.h  MainLevel.cpp  MainLevel.h
main/cpp/freetype/: CMakeLists.txt
main/cpp/glm-master/: CMakeLists.txt
main/cpp/iolib/: CMakeLists.txt
main/cpp/iolib/player/: SampleBuffer.h  SimpleMultiPlayer.cpp  SimpleMultiPlayer.h
main/cpp/parselib/: CMakeLists.txt
(+10 files in other folders)
